[package]
name = "multer"
version = "1.2.2"
description = "An async parser for `multipart/form-data` content-type in Rust."
homepage = "https://github.com/rousan/multer-rs"
repository = "https://github.com/rousan/multer-rs"
keywords = ["multipart-formdata", "multipart-uploads", "async", "formdata"]
categories = ["asynchronous", "web-programming"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["all"]

[features]
default = []
all = ["json"]
json = ["serde", "serde_json"]
tokio-io = ["tokio", "tokio-util"]

[dependencies]
log = "0.4"
bytes = "1.0"
futures-util = { version = "0.3", default-features = false }
twoway = "0.2"
http = "0.2"
httparse = "1.3"
mime = "0.3"
regex = "1.3"
once_cell = "1.5.2"
encoding_rs = "0.8"
derive_more = "0.99"

serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.0", features = [],  optional = true }
tokio-util = { version = "0.6", features = ["io"],  optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "0.14", features = ["server", "http1", "stream", "tcp"] }

[build-dependencies]
version_check = "0.9"

[[example]]
name = "parse_async_read"
path = "examples/parse_async_read.rs"
required-features = ["tokio-io"]
