[package]
name = "multer"
version = "3.1.0"
description = "An async parser for `multipart/form-data` content-type in Rust."
homepage = "https://github.com/rwf2/multer"
repository = "https://github.com/rwf2/multer"
keywords = ["multipart", "multipart-formdata", "multipart-uploads", "async", "formdata"]
categories = ["asynchronous", "web-programming"]
authors = ["Rousan Ali <hello@rousan.io>"]
readme = "README.md"
license = "MIT"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[package.metadata.playground]
features = ["all"]

[features]
default = []
all = ["json"]
json = ["serde", "serde_json"]
tokio-io = ["tokio", "tokio-util"]
log = ["dep:log"]

[dependencies]
bytes = "1.0"
futures-util = { version = "0.3", default-features = false }
memchr = "2.4"
http = "1.0"
httparse = "1.3"
mime = "0.3.10"
encoding_rs = "0.8.20"
spin = { version = "0.9", default-features = false, features = ["spin_mutex"] }

log = { version = "0.4.15", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.0", features = [],  optional = true }
tokio-util = { version = "0.7", features = ["io"],  optional = true }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["server", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1.1", features = ["full"] }

[build-dependencies]
version_check = "0.9"

[[example]]
name = "parse_async_read"
path = "examples/parse_async_read.rs"
required-features = ["tokio-io"]
